kubedeploy-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: test
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: redis/redis-stack-server:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 250m
              memory: 2Gi
          ports:
            - containerPort: 6379

      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: test
  labels:
    app: redis
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
    - port: 6379
      name: http
      targetPort: 6379
